--- a/Homepage.html
+++ b/Homepage.html
@@ -17,7 +17,7 @@
 </header>
 <main>
 <img src="Ironrodf.png" alt="Picture of iron rod" width="200px">
-<img src="Ironrods.jpg" alt="Picture of iron rod" sizes="150%">
+<img src="Ironrods.jpg" alt="Picture of iron rod" sizes="200px">
 <img src="Ironrodt.jpg" alt="Picture of iron rod" width="200px">
 <div>
 	<p><strong>Building material merchant</strong></p>
